gitops/cicd/nexus2/nexus-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: "2019-12-07T16:23:08Z"
  labels:
    app: nexus
    template: nexus2-persistent-template
  name: nexus
  namespace: cicd2
  resourceVersion: "89933"
  selfLink: /api/v1/namespaces/cicd2/services/nexus
  uid: db04092c-190d-11ea-8cae-0ef0e3c74fbe
spec:
  clusterIP: 172.30.115.194
  ports:
  - name: 8081-tcp
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    deploymentconfig: nexus
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
